--- a/package.json
+++ b/package.json
@@ -478,7 +478,11 @@
     "whitebit.com",
     "WhiteBit",
     "bitmax.io",
-    "BitMax"
+    "BitMax",
+    "coinsbit.io",
+    "Coinsbit",
+    "p2pb2b.io",
+    "p2pb2b"
   ],
   "collective": {
     "type": "opencollective",
