--- a/package.json
+++ b/package.json
@@ -482,7 +482,11 @@
     "bytetrade.com",
     "ByteTrade",
     "ftx.com",
-    "FTX"
+    "FTX",
+    "coinsbit.io",
+    "Coinsbit",
+    "p2pb2b.io",
+    "p2pb2b"
   ],
   "collective": {
     "type": "opencollective",
