--- a/package.json
+++ b/package.json
@@ -486,7 +486,9 @@
     "coinsbit.io",
     "Coinsbit",
     "p2pb2b.io",
-    "p2pb2b"
+    "p2pb2b",
+    "bkex.com",
+    "BKEX"
   ],
   "collective": {
     "type": "opencollective",
